# osm-fourmore

./: .env  .env.development  .env.example  .env.production  .gitignore  AGENTS.md  BACKEND_DEPLOYMENT.md  DEVELOPMENT.md  LICENSE.md  Makefile  README.md  SETUP.md  TEST_OSM_INTEGRATION.md  deploy-local.sh  deploy-vps.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pyproject.toml  start.sh
backend/: Dockerfile  migrate.py  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  database.py  database_models.py  db.py  main.py  models.py  osm_api.py  quests.py
backend/app/pipeline/: osm_processor.py
backend/app/quests/: bus-stop-shelter.json  bus_stop_bench.json  cafe_food.json  food-takeout.json  free-wifi.json  shop_credit_card.json  wheelchair-accessible.json
backend/app/routers/: auth.py  categories.py  checkins.py  osm_edits.py  places.py  quests.py  users.py
backend/migrations/: 001_add_quest_responses_table.sql  002_add_user_expert_mode.sql
backend/tests/: test_auth.py  test_config.py  test_users.py
config/: postgresql.conf
data-pipeline/: Dockerfile  README.md  category_mapping.json  contactless-payment.json  poi_categories.csv  poi_mapping.lua  pois.lua  prefilter_osm.sh  requirements.txt  run_osm2pgsql.sh  update_osm2pgsql.sh
docs/: CATEGORY_MAPPING.md  COOLIFY_SETUP.md  MOBILE_CONVERSION.md  POSTGRESQL_TUNING.md  osm_to_naics_mapping.csv
fourmore_shared/: __init__.py  category_mapping.py  db.py
frontend/: .env.example  .env.production  .eslintignore  .eslintrc.cjs  Caddyfile  Caddyfile.prod  (+7 more)
(+90 files in other folders)
